feat(feature/embedding) update openai embedding task - OpenAI Key가 유요하지 않을 경우, `OPENAI_API_KEY_INVALID`을 반환한다.