@@ -51,4 +51,9 @@ kotlin {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs(
+        "-XX:+EnableDynamicAgentLoading",
+        "-Djdk.instrument.traceUsage=false",
+        "-Dkotlinx.coroutines.debug.enable.creation.stack.trace=false"
+    )
 }
